examples/datalog/14_aggregations/73_count_star.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_count_star
Knowledge graph 'test_count_star' created.
Switched to knowledge graph: test_count_star
> .kg use test_count_star
Switched to knowledge graph: test_count_star
> +data[(1, "a"), (2, "b"), (3, "c"), (4, "d"), (5, "e")].
Inserted 5 fact(s) into 'data'.
> +total_rows(<COUNT:Id>) :- data(Id, _).
Script error: Parse error: Invalid term: '<COUNT:Id>'
